changes in some styles

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,9 +33,9 @@
             <a href="/founder"><img src="/images/randallfounder.png"></a>
         </div>
         <div class="cta-right">
-            <h1 style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px;">Scholarship Auditions: Visionary Pioneers</h1>
+            <div style="text-shadow: 3px 3px 5px grey; color: #ecad34; margin-left: 5px; font-size: 3.3em;">Scholarship Auditions: Visionary Pioneers</div>
             <br>
-            <p>Our online platform empowers scholastic performing arts students, guiding them through the intricate journey of application, audition, and scholarship attainment while seamlessly connecting them with collegiate music recruiters.</p>
+            <p class="cta-right-info">Our online platform empowers scholastic performing arts students, guiding them through the intricate journey of application, audition, and scholarship attainment while seamlessly connecting them with collegiate music recruiters.</p>
             <br>
             <div class="cta-smallbox">
                 <div class="cta-smallbox-text">
@@ -117,9 +117,8 @@
                     <img src="/images/accoladi.png" alt="Accoladi">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/accoladi.png"></a>
                     <p style="text-align: center;">An online matching platform connecting aspiring music majors and collegiate performers with school of music recruiters, serving as a comprehensive resource for the entire application, audition, scholarship and acceptance process.</p>
-                    <a href="https://www.accoladi.com/"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="https://www.accoladi.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -128,9 +127,8 @@
                     <img src="/images/nsjrma.png" alt="NSMA Jr">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/nsjrma.png"></a>
                     <p style="text-align: center;">An online awards system for middle school music students, mirroring honor ensemble audition requirements.</p>
-                    <a href="https://www.nationalscholasticjuniormusiciansawards.com/home"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="https://www.nationalscholasticjuniormusiciansawards.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -139,10 +137,9 @@
                     <img src="/images/director-letters.png" alt="Director Letters">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/director-letters.png"></a>
                     <p style="text-align: center;">A compilation of tailored topic-specific letters addressing the distinct communication requirements of music educators.
                     </p>
-                    <a href="http://www.directorletters.com/home"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="http://www.directorletters.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
 
             </div>
@@ -152,9 +149,8 @@
                     <img src="/images/my-music-future.png" alt="My Music Future">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/my-music-future.png"></a>
                     <p style="text-align: center;">An aptitude assessment to assist students in determining their suitability for a music career and identifying their ideal music-related path.</p>
-                    <a href="https://www.mymusicfuture.com/"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="https://www.mymusicfuture.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -163,9 +159,8 @@
                     <img src="/images/between-bands.png" alt="Between Bands">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/between-bands.png"></a>
                     <p style="text-align: center;">An interactive edutainment website designed for marching band fans.</p>
-                    <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
+                    <a href="" target="_blank"><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
             </div>
 
@@ -174,7 +169,6 @@
                     <img src="/images/honor-ensemble-conductors.png" alt="Honor Ensemble Conductors">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/honor-ensemble-conductors.png"></a>
                     <p style="text-align: center;">The central hub linking elite conductors with global honor ensemble organizers.
                     </p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
@@ -186,10 +180,9 @@
                     <img src="/images/nsma.png" alt="NSMA">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/nsma.png"></a>
                     <p style="text-align: center;">A comprehensive online awards system for high school music students, closely mirroring collegiate audition standards.
                     </p>
-                    <a href="https://www.nationalscholasticmusiciansawards.com/home"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="https://www.nationalscholasticmusiciansawards.com/home" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
 
@@ -198,9 +191,8 @@
                     <img src="/images/music-city-bowl-band.png" alt="Music City Bowl Band">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/music-city-bowl-band.png"></a>
                     <p style="text-align: center;">The online community for high school and college marching band members who will form the annual USA Festival Marching Band performing at the Music City Bowl in Nashville, Tennessee.</p>
-                    <a href="https://www.musiccitybowlband.com/"><p style="color: #ecad34;">Visit Site</p></a>
+                    <a href="https://www.musiccitybowlband.com/" target="_blank"><p style="color: #ecad34;">Visit Site</p></a>
                 </div>
             </div>
         </div>
@@ -215,7 +207,6 @@
                     <img src="/images/hollywood-sightreading.png" alt="Hollywood Sightreading">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/hollywood-sightreading.png"></a>
                     <p style="text-align: center;">A methodical platform empowering academic musicians to excel in precision and artistry in sightreading, while performing alongside renowned Hollywood movie session soundtrack orchestras.
                     </p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
@@ -226,7 +217,6 @@
                     <img src="/images/between-choirs.png" alt="Between Choirs">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/between-choirs.png"></a>
                     <p style="text-align: center;">An engaging edutainment website tailored for show choir enthusiasts.
                     </p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
@@ -237,7 +227,6 @@
                     <img src="/images/american-band-dad.png" alt="American Band Dad" width="600" height="400">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/american-band-dad.png"></a>
                     <p style="text-align: center;">The central hub for whimsical edutainment podcasts featuring fictional Wendell Bud McFarland, who humorously assumes the role of National President of the American Band Dad Association.
                     </p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
@@ -248,7 +237,6 @@
                     <img src="/images/profet.png" alt="Profet" width="600" height="400">
                 </div>
                 <div class="overlay-content" style="display: flex; flex-direction: column;">
-                    <a target="_blank" href="/images/profet.png"></a>
                     <p style="text-align: center;">A precise assessment tool enabling high school music students to forecast their ideal collegiate music journey, aligning with the career aspirations, performance history, and musical proficiency as aspiring music majors.</p>
                     <a href=""><p style="color: #ecad34;">Coming Soon!</p></a>
                 </div>
