--- a/views/intern.ejs
+++ b/views/intern.ejs
@@ -4,7 +4,7 @@
     <section style="display: flex; flex-direction: row; justify-content: center; align-items: center;">
         <img src="/images/gradcap.png" class="grad-cap" style="width: 25rem; height: 15rem; margin: 0 3rem; transform: scaleX(-1);        ">
         <div style="border: #ecad34 solid 1rem; background-color: #12151d; padding: 2rem; max-width: 500rem; width: 100%; margin-bottom: 2rem;">
-            <h1 style="font-size: 3.5rem; font-weight: 700; text-align: center; color: white;">Internship Program <br> at <br> Scholarship Auditions</h1>
+            <h1 style="font-size: 3.8rem; font-weight: 700; text-align: center; color: white;">Internship Program at Scholarship Auditions</h1>
         </div>
         <img src="/images/gradcap.png" class="grad-cap" style="width: 25rem; height: 15rem; margin: 0 3rem;">
     </section>
@@ -37,21 +37,21 @@
                     <p>Anthony Cash, 2021 Summer Internship</p>
                     <p>Holy Cross University</p>
                 </div>
-                <div style="border: .5rem solid deepskyblue; background-color: white; max-width: 600px; width: 100%; margin:1rem; padding: 1rem; color: black;">
-                    <p style="font-size: 1.4rem;">"Going into this summer, I was unsure what the future held, and I
+                <div style="border: .5rem solid deepskyblue; background-color: white; max-width: 700px; width: 100%; margin:1rem; padding: 1rem; color: black;">
+                    <p style="font-size: 1.5rem;">"Going into this summer, I was unsure what the future held, and I
                         was anxious about getting an internship or job in a professional
                         industry. I applied and applied, but every opportunity fell through
                         until I got an email from ScholarshipAuditions.com. At first, I didn’t
                         know what to expect, and I was very nervous. However, after a few
                         days, I realized that this was an excellent place to learn and flourish
                         as a professional and as a developing young man.</p>
-                    <p style="font-size: 1.4rem;">From writing articles to performing commercials,
+                    <p style="font-size: 1.5rem;">From writing articles to performing commercials,
                         ScholarshipAuditions.com gave me hands-on experience, working
                         with seasoned professionals committed to training the next
                         generation. This internship opened doors for my future that I never
                         thought possible, and God has used ScholarshipAuditions.com to
                         order my steps closer to where He wants me to be.</p>
-                    <p style="font-size: 1.4rem;">ScholarshipAuditions.com makes a difference in the lives of both
+                    <p style="font-size: 1.5rem;">ScholarshipAuditions.com makes a difference in the lives of both
                         the students they serve and the employees and interns they hire.
                         Neither of my parents went to a four-year college, so I went into
                         college with little knowledgeable help. Because of
@@ -68,14 +68,14 @@
                     <p>Bailey Wrenne, 2021 Summer Internship</p>
                     <p>Middle Tennessee State University</p>
                 </div>
-                <div style="border: .5rem solid deepskyblue; background-color: white; max-width: 600px; width: 100%; margin:1rem; padding: 1rem; color: black;">
-                    <p style="font-size: 1.4rem;">"This summer I had the opportunity to be a graphic design intern at
+                <div style="border: .5rem solid deepskyblue; background-color: white; max-width: 700px; width: 100%; margin:1rem; padding: 1rem; color: black;">
+                    <p style="font-size: 1.5rem;">"This summer I had the opportunity to be a graphic design intern at
                         ScholarshipAuditions.com. Currently there are very few internships in
                         my field for currently enrolled college students but after weeks of
                         searching I came in contact with ScholarshipAuditions.com. After being
                         accepted into their program I realized what a positive environment this
                         was for college students getting introduced into the business world.</p>
-                    <p style="font-size: 1.4rem;">This internship utilized all the skills I learned through my college courses
+                    <p style="font-size: 1.5rem;">This internship utilized all the skills I learned through my college courses
                         and put them into real world projects. Unlike other internships there was
                         no busy work involved instead we had the opportunity to work on real
                         projects that the company utilized in their research, website, and
@@ -88,11 +88,11 @@
     </section>
 
     <section>
-        <div style="display:flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
+        <div style="display:flex; flex-direction: row; flex-wrap: wrap; justify-content: space-evenly; align-items: center;">
             <div id="player" style="display: flex; justify-content: center; align-items: center !important; max-width: 750px; width: 100%; margin: 1rem;">
                 <iframe style="border: 5px solid deepskyblue;" width="660" height="415" src="https://www.youtube.com/embed/PFKf0yDUKqQ?si=p7VyLZESVRIHcaBw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <div style="justify-content: end; text-align: left; width: 450px; background-color: #ecad34; padding: 2rem; margin: 1rem; border: 5px solid deepskyblue;">
+            <div style="justify-content: end; text-align: left; width: 450px; background-color: #ecab34cd; padding: 2rem; margin: 1rem; border: 5px solid deepskyblue;">
                 <p>In the closing week of every internship class, each student embarks in an enlightening
                 journey of reflection through an empowering exit interview, paving the way for heartfelt
                 written and captivating video references.</p>
