--- a/views/research-influencers.ejs
+++ b/views/research-influencers.ejs
@@ -24,67 +24,64 @@
         <br>
         <p>A comprehensive course for school of music recruiters Featuring Dr. Steven Moore - Associate Dean of Undergraduate Studies at the Frost School of Music at the University of Miami</p>
         <br>
-        <br>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1aggx9Ojn6oA8E5BdLAWOUmY42NNfhsxT/preview" width="200" height="140" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1aggx9Ojn6oA8E5BdLAWOUmY42NNfhsxT/preview" width="250" height="140" allow="autoplay"></iframe>
             </div>
-            <div style="width: 30rem; text-align: right; margin: 2rem;">
-                <h3>Introduction</h3>
-                <p>Nine-point plan to achieve success in collegiate music recruiting.</p>
+            <div style="width: 30rem; text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Introduction</h3>
+                <div style="font-size: 1.75rem;">Nine-point plan to achieve success in collegiate music recruiting.</div>
             </div>
         </div>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1JRbpe3azgxTssfy8zUsEnn4MCEM5BSwQ/preview" width="200" height="140" allow="autoplay"></iframe> 
+                <iframe src="https://drive.google.com/file/d/1JRbpe3azgxTssfy8zUsEnn4MCEM5BSwQ/preview" width="250" height="140" allow="autoplay"></iframe> 
             </div>
-            <div style="width: 30rem;  text-align: right; margin: 2rem;">
-                <h3>Principles and
-                    Terms of
-                    Recruiting</h3>
-                <p>Describing core terms and fundamentals of recruiting.</p>
+            <div style="width: 30rem;  text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Principles and Terms of Recruiting</h3>
+                <div style="font-size: 1.75rem;">Describing core terms and fundamentals of recruiting.</div>
             </div>
         </div>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1Q-YpeqWjMzOrRYtK3wagTcIlMtza3HKt/preview" width="200" height="140" allow="autoplay"></iframe>                </video> 
+                <iframe src="https://drive.google.com/file/d/1Q-YpeqWjMzOrRYtK3wagTcIlMtza3HKt/preview" width="250" height="140" allow="autoplay"></iframe>                </video> 
             </div>
-            <div style="width: 30rem;  text-align: right;">
-                <h3>Goal Setting</h3>
-                <p>Metrics for setting goals and how to track them through each stage of the recruitment process.</p>
+            <div style="width: 30rem; text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Goal Setting</h3>
+                <div style="font-size: 1.75rem;">Metrics for setting goals and how to track them through each stage of the recruitment process.</div>
             </div>
         </div>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1oKkqSivWWVH5dbSPejT95N9LRfx8NCJt/preview" width="200" height="140" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1oKkqSivWWVH5dbSPejT95N9LRfx8NCJt/preview" width="250" height="140" allow="autoplay"></iframe>
             </div>
-            <div style="width: 30rem;  text-align: right; margin: 2rem;">
-                <h3>Building a Funnel for Success</h3>
-                <p>How to chart a funnel by instrument and program for students to achieve success.</p>
+            <div style="width: 30rem;  text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Building a Funnel for Success</h3>
+                <div style="font-size: 1.75rem;">How to chart a funnel by instrument and program for students to achieve success.</div>
             </div>
         </div>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap;  justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1IIkuJLK8TOnlw1Hca0ZglTie0vggYyEK/preview" width="200" height="140" allow="autoplay"></iframe>
+                <iframe src="https://drive.google.com/file/d/1IIkuJLK8TOnlw1Hca0ZglTie0vggYyEK/preview" width="250" height="140" allow="autoplay"></iframe>
             </div>
-            <div style="width: 30rem;  text-align: right; margin: 2rem;">
-                <h3>Identifying Prospective Students</h3>
-                <p>How and where colleges find the best prospective students.</p>
+            <div style="width: 30rem;  text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Identifying Prospective Students</h3>
+                <div style="font-size: 1.75rem;">How and where colleges find the best prospective students.</div>
             </div>
         </div>
         <div class="ri-right-sections" style="display: flex; flex-direction: row; flex-wrap: wrap;  justify-content: space-between; align-items: center;">
             <div style="width: 15rem; margin: 2rem;">
                 <br>
-                <iframe src="https://drive.google.com/file/d/1KNpFdj5zb2va6AIDUEoAwhpWzWuhXs_X/preview" width="200" height="140" allow="autoplay"></iframe> 
+                <iframe src="https://drive.google.com/file/d/1KNpFdj5zb2va6AIDUEoAwhpWzWuhXs_X/preview" width="250" height="140" allow="autoplay"></iframe> 
             </div>
-            <div style="width: 30rem; text-align: right; margin: 2rem;">
-                <h3>Value Proposition</h3>
-                <p>How to articulate the appropriate value proposition for each student and how to stage effective recruiting events.</p>
+            <div style="width: 30rem; text-align: right; margin: 3rem;">
+                <h3 style="font-weight: bold; color: rgb(247, 242, 242);">Value Proposition</h3>
+                <div style="font-size: 1.75rem;">How to articulate the appropriate value proposition for each student and how to stage effective recruiting events.</div>
             </div>
         </div>
         <br>
