--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,11 +6,6 @@ section{
     margin: 4rem;
 }
 
-@media screen and (max-width: 600px) {
-    section {
-        margin: 1rem;
-    }
-  }
 h1 {
     font-family:'Poppins';
     font-weight: 700;
@@ -35,9 +30,13 @@ h1 {
 
 .nav-list-item a {
     color: #ecad34;
-    font-size: 15px;
+    font-size: 1.9rem;
     padding-left: 2rem;
     padding-right: 2rem;
+}
+
+.nav-list-item a:hover {
+    color: white;
 }
 
 .top-nav {
@@ -46,9 +45,10 @@ h1 {
   align-items: center;
   justify-content: space-between;
   background-color: #12151d;
+  position: sticky;
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #ecad34;
-  height: 50px;
+  height: 100px;
   padding-top: 3em;
   padding-bottom: 3em;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(25, 24, 24, 0.3) 0px 7px 13px -3px, rgba(30, 29, 29, 0.2) 0px -3px 0px inset;
@@ -241,6 +241,7 @@ footer{
     overflow: hidden;
 }
 
+
 .hero-carousel {
     position: relative;
     width: 100vw;
@@ -352,7 +353,7 @@ footer{
     background-repeat: no-repeat;
     margin: 0rem 0rem !important;
     padding-top: 3rem;
-    border: rgb(34, 133, 186) 4rem solid;
+    border: rgb(34, 133, 186) 2rem solid;
     border-left: none;
     border-right: none;
 }
@@ -403,7 +404,7 @@ footer{
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
- background-color: rgb(196, 218, 233);
+ background: linear-gradient(rgb(196, 218, 233), rgb(240, 246, 250));
  margin: 0rem 0rem;
  padding-bottom: 4rem;
  padding-top: 4rem;
@@ -426,11 +427,12 @@ footer{
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    max-width: 60rem;
-    width: 97%;
-    padding: 3rem;
+    max-width: 90rem;
+    /* padding: 2rem; */
     margin: 2rem;
 }
+
+
 
 .cta-smallbox{
     display: flex;
@@ -447,10 +449,19 @@ footer{
 }
 
 @media screen and (max-width: 650px) {
+    .cta-right-info {
+        font-size: 1.5rem;
+    }
+    .cta-smallbox {
+        margin: 0;
+    }
     .cta-smallbox-img {
         width: 15rem;
         height: 15rem;
         margin-top: 6rem;
+    }
+    .cta-smallbox p {
+        font-size: 1.5rem;
     }
 }
 
@@ -560,7 +571,7 @@ footer{
     flex-direction: row;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: rgb(196, 218, 233);
+    background: linear-gradient(rgb(196, 218, 233), rgb(240, 246, 250));
     margin-left: 0;
     margin-right: 0;
     padding: 7rem 1rem;
@@ -702,7 +713,7 @@ p {
 
 @media screen and (max-width: 600px) {
     p {
-        font-size: 1rem;
+        font-size: 1.5rem;
         padding: 0 0;
     }
 }
@@ -771,7 +782,7 @@ img{
     flex-direction: row;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    background-color: rgb(196, 218, 233);
+    background: linear-gradient(rgb(196, 218, 233), rgb(240, 246, 250));
     margin-top: 12rem;
     margin-bottom: 12rem;
     padding: 10rem 0;
@@ -785,14 +796,37 @@ img{
 }
 
 .contact-right{
-    max-width: 450px;
+    max-width: 600px;
     width: 100%;
     margin: 4rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .contact-right h1 {
     font-size: 4rem;
     font-family:'Poppins';
     font-weight: 600;
+}
+
+.about-button {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border: solid 1px black;
+    transition: background 0.1s ease-in-out;
+}
+
+.about-button:hover {
+    background-color: #525c758b;
+}
+
+#submitButton {
+    width: 100%;
+}
+
+#submitButton:hover {
+    color: white;
 }
 
 .contact-form{
@@ -836,13 +870,11 @@ img{
     outline: none;
   }
 
-
-
-
-
-
-
-
+@media screen and (max-width: 1277px) {
+    .contact-left {
+        display: none;
+    }
+}
 
 
 /*--------------ABOUT PAGE------------------*/
@@ -983,30 +1015,23 @@ img{
 .ri-page-left{
     display: flex;
     flex-direction: column;
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
     border: 3px solid black;
     padding: 3rem;
 }
 
-
-
-
-
-
-
-
 .ri-page-right{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 600px;
+    max-width: 700px;
     width: 100%;
     padding: 3rem;
-    padding-top: 7rem;
-    padding-bottom: 7rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     background-color: #ecad34;
-    margin: 1rem;
+    margin: 3rem;
 }
 
 
@@ -1039,8 +1064,8 @@ img{
 .responsive1 .overlay-content {
     width: 100%;
     height: 100%;
-    background-color: #ffeac9;
-    color: black;
+    background-color: #12151d;
+    color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1050,7 +1075,7 @@ img{
     left: 100%;
     transition-duration: 0.5s;
     z-index: 1;
-    opacity: 0.9;
+    opacity: 0.99;
 }
 
 .overlay-content a{
@@ -1066,4 +1091,11 @@ img{
 
 .second-intern{
     display: flex; flex-direction: row-reverse; flex-wrap: wrap; justify-content: space-around; padding-bottom: 5rem; justify-content: center; align-items: center;
+}
+
+@media screen and (max-width: 667px){
+    .responsive1{
+        max-width: 667px;
+        border: 0.5rem solid #ecad34;
+    }
 }
